<resources>
    <string name="app_name">BookStore</string>
    <string name="choose_language">Choose language</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="verify">Verify</string>
    <string name="sign_in">Sign in</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="you_have_already_registered">You have already registered?</string>
    <string name="sign_up">Sign up</string>
    <string name="new_one">New one?</string>
    <string name="menu">Menu</string>
    <string name="tohirov_shamsiddin">Tohirov Shamsiddin</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="my_books">My books</string>
    <string name="help">Help?</string>
    <string name="log_out">Log Out</string>
    <string name="book_library">Book Library</string>
    <string name="fantasy">Fantasy</string>
    <string name="religion">Religion</string>
    <string name="literature">Literature</string>
    <string name="business_literature">Business literature</string>
    <string name="biography">Biography</string>
    <string name="novel">Novel</string>
    <string name="science">Science</string>
    <string name="news">News</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="profile">Profile</string>
    <string name="rename">Rename</string>
    <string name="write_name">Write name</string>
    <string name="saved_books">Saved Books</string>
    <string name="your_saved_books_will_be_here">Your saved books will be here</string>
    <string name="set_up_password">Set up password</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="notes">You don`t have notifications yet</string>
    <string name="contactme">Write to takhirovshamsiddin@gmail.com</string>
    <string name="change_language">Change language</string>
</resources>