<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavedActivity"
    android:background="#E5E7E9">
    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/menutask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:elevation="15dp"
        android:backgroundTint="@color/white">
        <ImageButton
            android:id="@+id/backtomain"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/back"
            android:layout_margin="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginStart="105dp"/>
        <ImageView
            android:id="@+id/person_profile_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/personprofile"
            android:background="@drawable/dumaloqforcardview"
            android:layout_marginStart="95dp"
            android:layout_marginTop="90dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tohirov_shamsiddin"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="200dp"
            android:layout_marginStart="60dp"/>
        <LinearLayout
            android:id="@+id/liner_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="280dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/notification"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-2dp"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="320dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/settings"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-2dp"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_mybooks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="360dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/books"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_books"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-2dp"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="400dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/help"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-2dp"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="580dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/logout"/>
            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tepa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="#E5E7E9"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/book_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_books"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tepa"
        app:layout_constraintBottom_toTopOf="@id/taskboard"
        android:id="@+id/savedbook_listview"/>
    <TextView
        android:id="@+id/hiddentext"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/your_saved_books_will_be_here"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <LinearLayout
        android:id="@+id/taskboard"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/forliner"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:orientation="horizontal">
            <View
                android:id="@+id/homeline"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/underline3"
                android:layout_marginEnd="8dp"/>
            <View
                android:id="@+id/newsline"
                android:layout_marginStart="8dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/underline3"
                android:layout_marginEnd="8dp"/>
            <View
                android:id="@+id/selectedline"
                android:layout_marginStart="8dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/underline"
                android:layout_marginEnd="8dp"/>
            <View
                android:id="@+id/profileline"
                android:layout_marginStart="8dp"
                android:background="@drawable/underline3"
                android:padding="12dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/home"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/home"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:padding="12dp"/>
            <ImageButton
                android:id="@+id/news"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/news"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:padding="12dp"/>
            <ImageButton
                android:id="@+id/selected"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/selected2"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:padding="12dp"/>
            <ImageButton
                android:id="@+id/profile"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/person"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:padding="12dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>