<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="#E5E7E9">
    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/menutask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:elevation="15dp"
        android:backgroundTint="@color/white">
        <ImageButton
            android:id="@+id/backtomain"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/back"
            android:layout_margin="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginStart="105dp"/>
        <ImageView
            android:id="@+id/person_profile_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/personprofile"
            android:background="@drawable/dumaloqforcardview"
            android:layout_marginStart="95dp"
            android:layout_marginTop="90dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tohirov_shamsiddin"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="200dp"
            android:layout_marginStart="60dp"/>
        <LinearLayout
            android:id="@+id/liner_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="280dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/notification"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-2dp"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="320dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/settings"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-2dp"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/liner_mybooks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="360dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/books"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_books"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-2dp"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="400dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/help"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-2dp"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="580dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/logout"/>
            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:layout_marginTop="1dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tepa_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:id="@+id/menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:background="#E5E7E9"
            android:src="@drawable/ic_baseline_menu_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/book_library"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/profileimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tepa_profile"
        android:layout_marginTop="20dp"
        android:src="@drawable/personprofile"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/person_name"
        android:layout_height="wrap_content"
        android:text="@string/tohirov_shamsiddin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileimg"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:id="@+id/liner_rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/person_name"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/rename"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:visibility="visible"
            android:id="@+id/name_textt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-2dp"
            android:textStyle="italic"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_name"
            android:visibility="gone"
            android:hint="@string/write_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/renamed_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:visibility="gone"
            android:id="@+id/done"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/done"
            android:layout_gravity="center"
            android:background="#E5E7E9"
            android:layout_marginStart="10dp"
            android:scaleType="centerCrop"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner_my_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/liner_rename"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/books"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_books"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-2dp"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/liner_my_books"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/logout"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-2dp"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/liner_log_out"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/language"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-2dp"
            android:textStyle="italic"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/taskboard_profile"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/forliner"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:orientation="horizontal">
            <View
                android:id="@+id/homeline_profile"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/underline3"
                android:layout_marginEnd="8dp"/>
            <View
                android:id="@+id/newsline_profile"
                android:layout_marginStart="8dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/underline3"
                android:layout_marginEnd="8dp"/>
            <View
                android:id="@+id/selectedline_profile"
                android:layout_marginStart="8dp"
                android:padding="12dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/underline3"
                android:layout_marginEnd="8dp"/>
            <View
                android:id="@+id/profileline_profile"
                android:layout_marginStart="8dp"
                android:background="@drawable/underline"
                android:padding="12dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/home_profile"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/home"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:padding="12dp"/>
            <ImageButton
                android:id="@+id/news_profile"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/news"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:padding="12dp"/>
            <ImageButton
                android:id="@+id/selected_profile"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/select"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:padding="12dp"/>
            <ImageButton
                android:id="@+id/profile_profile"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/profile2"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:padding="12dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>